[project]
name = "aram-strategy-agent"
version = "0.1.0"
description = "ARAM Coach — Patch-Scoped, Fact-Grounded LoL Agent (Local, LangGraph PEV)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.112.2",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "langgraph==0.2.34",
  "langchain-core==0.3.11",
  "rank-bm25==0.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.5.2",
  "httpx==0.27.2",
  "pytest==8.3.3",
  "openai==1.51.2",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

